<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_white"
        android:title="@string/menu_rescan_key"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_forget_pin"
        android:title="@string/menu_forget_pin"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_interfaces"
        android:title="@string/menu_hid_hotp"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_yk_apps"
        android:title="@string/menu_yubikey_apps"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_otp_pin"
        android:title="@string/menu_otp_pin"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_usb_diag"
        android:title="@string/menu_usb_diagnostics"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>
